@startuml ClassDiagram_Commands
skinparam defaultFontName Monospaced
skinparam shadowing false
skinparam linetype ortho
skinparam packageBackgroundColor #f9f9f9
skinparam packageBorderColor #aaaaaa
skinparam packageFontColor #666666
skinparam packageFontStyle bold
skinparam class {
  BackgroundColor<<interface>> #dae8fc
  BorderColor<<interface>>     #6c8ebf
  FontStyle<<interface>>       italic
  BackgroundColor<<abstract>>  #e1d5e7
  BorderColor<<abstract>>      #9673a6
  FontStyle<<abstract>>        italic
  BackgroundColor<<concrete>>  #fff2cc
  BorderColor<<concrete>>      #d6b656
  BackgroundColor<<manager>>   #d5e8d4
  BorderColor<<manager>>       #82b366
  BackgroundColor<<utility>>   #f5f5f5
  BorderColor<<utility>>       #666666
  FontColor<<utility>>         #333333
}

package "Command system" {
  interface ICommandQueue <<interface>> {
    + Push(in cmd : unique_ptr<ICommand>) : void
  }
  interface ICommand <<interface>> {
    + Execute() : void
  }
  class CommandQueue <<manager>> {
    - m_queue : vector<unique_ptr<ICommand>>
    --
    + Push(in cmd : unique_ptr<ICommand>) : void
    + Execute() : void
    + Clear() : void
  }
  class SetHeightmapCommand <<concrete>> {
    - m_surface : RayMarchedSurface*
    - m_path : string
    --
    + Execute() : void
  }
  class SetTechniqueCommand <<concrete>> {
    - m_surface : RayMarchedSurface*
    - m_technique : shared_ptr<IRayMarchingTechnique>
    --
    + Execute() : void
  }
  class DeleteObjectCommand <<concrete>> {
    - m_sceneManager : SceneManager*
    - m_target : shared_ptr<IDrawable>
    --
    + Execute() : void
  }
}

class MyApp <<concrete>> {
}
class ImGuiVisitor <<concrete>> {
}
abstract class RayMarchedSurface <<abstract>> {
}
interface IRayMarchingTechnique <<interface>> {
}
class SceneManager <<manager>> {
}
interface IDrawable <<interface>> {
}

CommandQueue ..|> ICommandQueue
SetHeightmapCommand ..|> ICommand
SetTechniqueCommand ..|> ICommand
DeleteObjectCommand ..|> ICommand
CommandQueue o-- "0..*" ICommand
MyApp *-- CommandQueue
ImGuiVisitor ..> ICommandQueue
SetHeightmapCommand ..> RayMarchedSurface
SetTechniqueCommand ..> RayMarchedSurface
SetTechniqueCommand o-- IRayMarchingTechnique
DeleteObjectCommand ..> SceneManager
DeleteObjectCommand o-- IDrawable
@enduml
